--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "npm": "^6.4.1",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "typescript": "^3.2.2"
   }
 }
